--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:react\"",
-    "dev:server": "tsx watch server/server.ts",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:react\" \"npm run dev:vue\"",
+    "dev:sr": "concurrently \"npm run dev:server\" \"npm run dev:react\"",
+    "dev:sv": "concurrently \"npm run dev:server\" \"npm run dev:vue\"",
+    "dev:server": "cross-env NODE_ENV=development tsx watch server/server.ts",
     "dev:react": "npm --prefix client/react run dev",
+    "dev:vue": "npm --prefix client/vue run dev",
     "dev:html": "npm --prefix client/html run dev",
-    "build": "npm run build:server && npm run build:react",
+    "build": "npm run build:vue && npm run build:react",
     "build:server": "tsc -p server/tsconfig.json",
     "build:react": "npm --prefix client/react run build",
+    "build:vue": "npm --prefix client/vue run build",
     "build:html": "npm --prefix client/html run build"
   },
   "keywords": [],
@@ -19,6 +23,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@fastify/http-proxy": "^11.2.0",
     "@fastify/static": "^8.2.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.4.0"
@@ -28,6 +34,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.0.3",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
