--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ Thumbs.db # Windows specific
 
 # Build output directories
 # ------------------------
-dist/
 /server/dist/            # Compiled TypeScript output for the server
 /client/react/dist/      # React build output (often named 'build' or 'dist')
 
@@ -54,3 +53,4 @@ coverage/
 
 public/
 !client/*/public/
+!dist/
